--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
-    <link href="%PUBLIC_URL%/logo.png" rel="icon"/>
+    <link href="%PUBLIC_URL%/icon.png" rel="icon"/>
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
     <meta content="#98C379" name="theme-color"/>
     <meta content="TwentyFive" name="description"/>
-    <link href="%PUBLIC_URL%/logo.png" rel="apple-touch-icon"/>
+    <link href="%PUBLIC_URL%/icon.png" rel="apple-touch-icon"/>
     <link href="%PUBLIC_URL%/manifest.json" rel="manifest"/>
     <title>TwentyFive</title>
 </head>
