--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,9 @@
     <meta charset="utf-8"/>
     <link href="%PUBLIC_URL%/icon.png" rel="icon"/>
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
-    <meta content="#98C379" name="theme-color"/>
-    <meta content="TwentyFive" name="description"/>
+    <meta content="#484E60" name="theme-color"/>
+    <meta content="TwentyFive / TwentyFiveSoftware - Mostly web development, but all sorts of other projects as well!" name="description"/>
+    <meta content="TwentyFive, TwentyFiveSoftware, software, web, development" name="keywords"/>
     <link href="%PUBLIC_URL%/icon.png" rel="apple-touch-icon"/>
     <link href="%PUBLIC_URL%/manifest.json" rel="manifest"/>
     <title>TwentyFive</title>
