switch to parcel 2

--- a/public/index.html
+++ b/public/index.html
@@ -2,18 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
-    <link href="%PUBLIC_URL%/icon.png" rel="icon"/>
+    <link href="./icon.png" rel="icon"/>
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
     <meta content="#98C379" name="theme-color"/>
     <meta content="TwentyFive / TwentyFiveSoftware - Mostly web development, but all sorts of other projects as well!" name="description"/>
     <meta content="TwentyFive, TwentyFiveSoftware, software, web, development" name="keywords"/>
-    <link href="%PUBLIC_URL%/icon.png" rel="apple-touch-icon"/>
-    <link href="%PUBLIC_URL%/manifest.json" rel="manifest"/>
     <title>TwentyFive</title>
 </head>
 <body>
-<noscript>You need to enable JavaScript to run this app.</noscript>
 <div id="root"></div>
-
+<script src="../src/index.tsx" type="module"></script>
 </body>
 </html>
